change edit auto check

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>Kunal Website</title>
 </head>
 <body>
-<h1>Website bole to je..</h1>
+<h1>Website bole to je..new added</h1>
 </body>
 </html>
